--- a/Pages/Consultas/Compras.razor
+++ b/Pages/Consultas/Compras.razor
@@ -1,6 +1,5 @@
 @page "/compras"
 
-@page "/compras/{CompraId:int}"
 
 @* Registro de compras *@
 
@@ -10,7 +9,7 @@
 
 @using BLL
 
-<EditForm Model="compras" OnValidSubmit="Guardar">
+<EditForm Model="articulo">
     <DataAnnotationsValidator />
 
     <div class="form-group col-3">
@@ -103,13 +102,14 @@
                             d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
                     </svg>
                 </label>
-                <select @bind="articulo.SuplidorId" class="form-select text-14">
+                <InputSelect @bind-Value ="articulo.SuplidorId" class="form-select text-14">
                     <option value="0" disabled selected>Seleccione un suplidor</option>
-                    @foreach (Suplidor item in SuplidorList)
+                    @foreach (var item in SuplidorList)
                     {
                         <option value="@item.SuplidorId">@item.Nombre </option>
                     }
-                </select>
+                </InputSelect>
+                <ValidationMessage For="@(() => articulo.SuplidorId)" />
                 <br>
             </div>
         </div>
@@ -159,14 +159,14 @@
                <label></label>
                <label></label>
 
-                <a href="ordencompra" data-placement="right" data-toggle="tooltip" type="submit"
-                    class="btn btn-lg btn-Comprar" title="Comprar articulo">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                        class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zM8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5V8z" />
-                    </svg><span> Comprar</span>
-                </a>
+               <button type="button" class="btn btn-lg btn-Comprar" @onclick="Comprar" title="Comprar articulo">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                            class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zM8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5V8z" />
+                        </svg><span> Comprar</span>
+                    </button>
+             
             </div>
             <p/>
         </div>
@@ -179,10 +179,6 @@
 
 #nullable disable // Para quitar el aviso de nulls
 
-    [Parameter]
-    public int CompraId { get; set; }
-
-    public Articulo compras = new Articulo();
     Articulo articulo = new Articulo();
 
     Suplidor suplidor = new Suplidor();
@@ -225,11 +221,13 @@
     {
         articulo = new Articulo();
         CategoriaList = categoriaBLL.GetList(c => true);
+        SuplidorList = suplidorBLL.GetList(c => true);
     }
 
-    public void Guardar() // Guardar articulo
+    public void Comprar() // Guardar articulo
     {
-        if (articulo.Nombre == string.Empty)
+
+         if (articulo.Nombre == string.Empty)
         {
             Toast.ShowWarning("Ingrese el nombre del articulo");
             return;
@@ -257,17 +255,16 @@
 
         if (articulo.Costo == 0)
         {
-            Toast.ShowWarning("Ingrese un Costo por Unidad");
+            Toast.ShowWarning("Ingrese un costo por Unidad");
             return;
         }
 
         if (articulo.Precio == 0)
         {
-            Toast.ShowWarning("Ingrese el precio de venta");
+            Toast.ShowWarning("Ingrese un precio de venta");
             return;
         }
-
-
+        
         var articulo2 = articuloBLL.ExisteNombre(articulo.Nombre);
         if (articulo2 == null) //si no existe
         {
@@ -318,19 +315,4 @@
         }
     }
 
-    public void Eliminar() // Eliminar articulo
-    {
-        bool Eliminar;
-
-        Eliminar = articuloBLL.Eliminar(articulo.ArticuloId);
-
-        if (Eliminar)
-        {
-            articulo = new Articulo();
-            CategoriaList = categoriaBLL.GetList(c => true);
-            Toast.ShowSuccess("Eliminado correctamente");
-        }
-        else
-            Toast.ShowError("No fue posible eliminar");
-    }
 }
