--- a/Pages/Registros/R_Suplidor.razor
+++ b/Pages/Registros/R_Suplidor.razor
@@ -66,10 +66,10 @@
 
 
                 <div class="form-group col-md-3">
-                    <a class="rz-border-radius-4 shadow border border-4 btn btn-lg btn btn-warning"
+                    <a class="rz-border-radius-1 shadow border border-0 btn btn-lg btn btn-warning"
                         data-toggle="tooltip" data-placement="right" title="Ingresar al reporte de suplidores"
                         href="reportesuplidores"
-                        style="position: absolute; top:0;  right:0; margin-right: 10px; margin-top: 120px;">
+                        style="position: absolute; top:0;  right:0; margin-right: 10px; margin-top: 346px;">
                         Suplidores
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-truck" viewBox="0 0 16 16">
@@ -136,19 +136,33 @@
                     <div class="form-group col-3 ">
                         <label>Fecha Ingreso </label>
                         <InputDate @bind-Value="suplidor.Fecha" class="form-control bg-fechasColor" />
+                        <br>
                     </div>
+                    
                 </div>
+                
+                <a data-toggle="tooltip "
+       data-placement="right "  style="position: absolute; top:0; right:0; margin-right: 20px; margin-top: 426px; ">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor " class="bi bi-chat-left-text " viewBox="0 0 16 16 ">
+                                <path
+                                    d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                                <path
+                                    d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
+                            </svg>
 
+                            Puede consultar los suplidores en el boton indicado en naranja.
 
-
+                        </a>
             </div>
+            
 
             <br>
 
             @*...................... Botones ......................*@
 
             <div class="card-footer">
-                <div class="form-group text-center" display: inline-block>
+                <div class="form-group text-left" display: inline-block>
                     <button type="button" class="btn btn-lg btn-primary" @onclick="Nuevo" title="Nuevo suplidor">
                         <span class="oi oi-file"> Nuevo</span>
                     </button>
@@ -160,8 +174,11 @@
                     <button type="button" class="btn btn-lg btn-danger" @onclick="Eliminar" title="Eliminar suplidor">
                         <span class="oi oi-trash"> Eliminar</span>
                     </button>
+                    
                 </div>
+                
             </div>
+            
         </div>
     </div>
 </EditForm>
