--- a/Pages/Registros/R_Ventas.razor
+++ b/Pages/Registros/R_Ventas.razor
@@ -72,7 +72,7 @@
                             <option value="0" disabled selected> Seleccione un articulo </option>
                             @foreach (Articulo item in ArticuloList)
                             {
-                                if (articulo.Precio > 0)
+                                if (item.CantidadComprada > 0)
                                 {
                                     <option value="@item.ArticuloId">@item.Nombre</option>
                                 }
@@ -117,9 +117,9 @@
 
                             <th class="border border-3">Cantidad</th>
 
-                            <th class="border border-3">Precio</th>
+                            <th class="border border-3">Precio RD $</th>
 
-                            <th class="border border-3">Importe</th>
+                            <th class="border border-3">Importe RD $</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -131,8 +131,8 @@
                                     <td>@item.ArticuloId</td>
                                     <td>@item.Descripcion</td>
                                     <td>@item.Cantidad</td>
-                                    <td>RD$ @articulo.Precio</td>
-                                    <td>RD$ @item.Importe</td>
+                                    <td>@item.PrecioArticuloComprado</td>
+                                    <td>@item.Importe</td>
                                     <td>
                                         <a class="btn-group-sm btn-close btn btn-group-lg btn-outline-danger"
                                     @onclick="(() => RemoverDetalle(item))">
@@ -327,6 +327,7 @@
         {
             venta.VentaId = VentaId;
             this.Buscar();
+            
         }
     }
 
@@ -364,6 +365,8 @@
             venta.SubTotal = auxArticulo.Precio * Convert.ToDecimal(Detalle.Cantidad); // Mostrando el subtotal de esa venta
 
             ITBIS = venta.SubTotal * 18 / 100; // Calculo de ITBIS
+
+            descripcion = auxArticulo.Nombre;
 
             venta.ITBIS = ITBIS;
 
